# fastserve

./: .env.example  .gitignore  LICENSE  README.md  install.sh  pyproject.toml
benchmarks/: RESULTS.md  baseline_accuracy.py  baseline_accuracy_driver.py  baseline_bench.py  bench_frontier.py  compare3.py  compare3_worker.py  compare3_worker_maxlen.py  compare_batch.py  driver.py  eval_tasks.py  models.py  retry.py  run_bench.py
publish/: PUBLISHED.md  README.md  batch.py  batch_frontier.py  batch_results.json  build_comparison_readme.py  model_card.py  quantize.py  quantize_local.py  update_cards.py  validate_and_publish.py
src/fastserve/: bench.py  cli.py  detect.py  engine.py
